--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,4 +7,10 @@
     </ion-toolbar>
   </ion-header>
 
+  <!-- 高さを必ず指定する -->
+  <capacitor-google-map
+    id="map"
+    style="display: inline-block; width: 100%; height: 100%;"
+  ></capacitor-google-map>
+
 </ion-content>
