--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,7 +3,7 @@
 <ion-content [fullscreen]="true">
   <ion-header>
     <ion-toolbar>
-      <ion-title size="large" slot="">格安自販機マップ</ion-title>
+      <ion-title size="large" slot="">自販機マップ</ion-title>
     </ion-toolbar>
   </ion-header>
 
