--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -9,7 +9,7 @@
       <ion-label>Tab 1</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button >
+    <ion-tab-button (click)=addCurrentLocation()>
       <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
       <ion-label>Tab 2</ion-label>
     </ion-tab-button>
