--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -19,13 +19,13 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons slot="primary">
-      <ion-button class="ripple-button round" (click)="hello(); rippleEffect($event)">
+      <ion-button class="ripple-button round" (click)="viewMode(); rippleEffect($event)">
         <ion-icon slot="icon-only" name="home-outline"></ion-icon>
       </ion-button>
       <ion-button class="ripple-button round" (click)="rippleEffect($event)">
         <ion-icon slot="icon-only" name="search-outline"></ion-icon>
       </ion-button>
-      <ion-button class="ripple-button round" (click)="addCurrentLocation(); rippleEffect($event)">
+      <ion-button class="ripple-button round" (click)="addMarkerMode(); rippleEffect($event)">
         <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
       </ion-button>
       <ion-button class="ripple-button round" (click)="rippleEffect($event)">
