--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -22,6 +22,9 @@
     id="map"
     style="display: inline-block; width: 100%; height: 100%;"
   ></capacitor-google-map>
+
+  <!-- マーカー情報オーバーレイ -->
+  <div id="marker-info" class="marker-info-overlay" style="display: none;"></div>
 </ion-content>
 
 
