--- a/src/app/map/map.page.scss
+++ b/src/app/map/map.page.scss
@@ -10,6 +10,9 @@ body {
   background: transparent;
 }
 
+
+
+
 ion-buttons {
   width: 100%;
   height: 8vh;                  /* 全体の高さ */
@@ -32,7 +35,32 @@ ion-icon {
   color: #555;
 }
 
+.filter-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5); /* 背景を半透明に */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
 
+.filter-panel {
+  background-color: #fff;
+  padding: 16px;
+  border-radius: 12px;
+  width: 90%;
+  max-width: 400px;
+}
+
+.filter-button {
+  margin-top: 16px;
+  margin-left: 32px;
+  margin-right: 32px;
+}
 
 
 // マーカー追加位置指定時
